--- a/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
@@ -58,7 +58,7 @@
                 <div class="carousel-caption">
                     <p class="animated fadeInRight">Đăng yêu cầu 1 phút</p>
                     <h1 class="animated fadeInLeft">Nhận &amp; so sánh nhiều báo giá minh bạch</h1>
-                    <a class="btn animated fadeInUp" th:href="@{/homepage/request}">Đăng yêu cầu</a>
+                    <a class="btn animated fadeInUp" th:href="@{/request}">Đăng yêu cầu</a>
                 </div>
             </div>
 
@@ -294,7 +294,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Chuyển nhà trọn gói</h3>
-                            <a class="btn" th:href="@{/homepage/request(category='chuyen-nha')}">+</a>
+                            <a class="btn" th:href="@{/request(category='chuyen-nha')}">+</a>
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Chuyển văn phòng</h3>
-                            <a class="btn" th:href="@{/homepage/request(category='chuyen-van-phong')}">+</a>
+                            <a class="btn" th:href="@{/request(category='chuyen-van-phong')}">+</a>
                         </div>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Bốc xếp &amp; kho bãi</h3>
-                            <a class="btn" th:href="@{/homepage/request(category='boc-xep-kho-bai')}">+</a>
+                            <a class="btn" th:href="@{/request(category='boc-xep-kho-bai')}">+</a>
                         </div>
                     </div>
                 </div>
@@ -343,7 +343,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Tháo lắp &amp; đóng gói</h3>
-                            <a class="btn" th:href="@{/homepage/request(category='thao-lap-dong-goi')}">+</a>
+                            <a class="btn" th:href="@{/request(category='thao-lap-dong-goi')}">+</a>
                         </div>
                     </div>
                 </div>
@@ -360,7 +360,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Vận chuyển liên tỉnh</h3>
-                            <a class="btn" th:href="@{/homepage/request(category='lien-tinh')}">+</a>
+                            <a class="btn" th:href="@{/request(category='lien-tinh')}">+</a>
                         </div>
                     </div>
                 </div>
@@ -376,7 +376,7 @@
                         </div>
                         <div class="service-text">
                             <h3>Cho thuê xe tải</h3>
-                            <a class="btn" th:href="@{/homepage/request(category='cho-thue-xe')}">+</a>
+                            <a class="btn" th:href="@{/request(category='cho-thue-xe')}">+</a>
                         </div>
                     </div>
                 </div>
